--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
 		<a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 		<nav class="site-nav">
 			<div class="trigger">
+				<a id="nav-home-link" class="page-link" href="/">Home</a>
 				{% for page in site.pages %}
 					{% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
 				{% endfor %}
