--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,7 @@ a:visited {
         text-align: center;
     }
     .site-nav .page-link {
-    	margin-left: 0;
+    	margin-left: 10px;
     	letter-spacing: -.5px;
     }
     
